# clang-format

./: .clang-format  .gitignore  clang-format.sh  clang_format_file.files  clang_format_file.includes  meson.build
src/: main.cpp
src/class_examples/: Alfa.cpp  Alfa.h  Bravo.cpp  Bravo.h  Charlie.cpp  Charlie.h  Delta.cpp  Delta.h
